- [#MODX-732] Added z-index force to topmenu for IE, fixed rightlogin div on topbar for IE

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -38,6 +38,7 @@ hr {
     height: 100%;
     width: 100%;
     padding: 0;
+    z-index: 99993;
 }
 
 .padding {
@@ -224,6 +225,7 @@ textarea.x-form-field {
     background-repeat:repeat-x;
     position: relative;
     text-shadow:1px -1px 0 #1f1f1f;
+    z-index: 99995;
 }
 #modx-login-user {
     font-weight: bold;
@@ -240,6 +242,7 @@ textarea.x-form-field {
     position:absolute;
     right:12px;
     z-index:1;
+    max-width: 250px;
 }
 #rightlogin span {
     -moz-border-radius: 3px;
@@ -571,7 +574,7 @@ table.classy tr.odd td {
     margin-left: 1em;
     position: relative;
     width: 78%;
-    z-index: 13;
+    z-index: 99996;
 }
 
 #modx-topnav {
@@ -590,6 +593,7 @@ ul#modx-topnav {
     padding:0;
     text-shadow:-1px 1px 0 #1F1F1F;
     border-bottom: 1px solid #1E1E1E;
+    z-index: 99997;
 }
 ul#modx-topnav li {
     float: left;
@@ -597,6 +601,7 @@ ul#modx-topnav li {
     padding:5px 13px;
     position: relative;
     background:transparent url(../images/style/separator/menu_sep.png) no-repeat scroll right 0;
+    z-index: 99998;
 }
 ul#modx-topnav li a{
     padding: 12px 5px 13px;
@@ -614,7 +619,7 @@ ul#modx-topnav li ul.modx-subnav {
     list-style: none;
     font-size:12px;
     position: absolute; /*--Important - Keeps modx-subnav from affecting main navigation flow--*/
-    z-index: 999999;
+    z-index: 99999 !important;
     left: 0; 
     top: 46px;
     background: #333;
